# ttsx

./: AGENTS.md  ARCHITECTURE.md  Makefile  README.md  TODO.md  pyproject.toml
demo/: qwentts_demo.py
src/ttsx/: __init__.py  __main__.py  cache.py  cli.py  config.py  hardware.py  hardware_requirements.py
src/ttsx/commands/: __init__.py  clone.py  generate.py  hardware.py  models.py  search.py  version.py  voices.py
src/ttsx/generation/: engine.py
src/ttsx/models/: hub.py  registry.py  types.py
src/ttsx/utils/: decorators.py  exceptions.py
src/ttsx/voice/: __init__.py  cloner.py  encoder.py  profiles.py
src/ttx/: __init__.py  __main__.py  cache.py  cli.py  config.py  hardware_requirements.py
src/ttx/commands/: __init__.py  hardware.py  models.py  search.py  version.py
src/ttx/generation/: __init__.py
src/ttx/models/: __init__.py  hub.py  registry.py  types.py
src/ttx/utils/: exceptions.py
