[project]
name = "ttsx"
version = "0.1.0"
description = "Modern CLI for text-to-speech generation and model management"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "ttsx contributors" }
]
license = { text = "MIT" }
keywords = ["tts", "text-to-speech", "cli", "huggingface", "pytorch", "voice-cloning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "huggingface-hub>=0.36.2",
    "psutil>=7.2.2",
    "py-cpuinfo>=9.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "qwen-tts>=0.1.1",
    "rich>=14.3.2",
    "scipy>=1.17.0",
    "soundfile>=0.13.1",
    "torch",
    "torchaudio",
    "typer>=0.24.0",
]

[project.scripts]
ttsx = "ttsx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.1",
]
